--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
                 
             }
             .container{
-                
+                box-sizing: border-box;
+                padding: 0 10px;
                 width: 100%;
                 height: 80vh;
                 background-color: #21537;
